[4] Minor fixes + reformatting code